cmake_minimum_required(VERSION 3.10)
project(crispy)

set(CMAKE_C_STANDARD 11)

AUX_SOURCE_DIRECTORY(src/cli CLI_SOURCE_FILES)
AUX_SOURCE_DIRECTORY(src/vm VM_SOURCE_FILES)
AUX_SOURCE_DIRECTORY(src/compiler COMPILER_SOURCE_FILES)
add_executable(${PROJECT_NAME} ${CLI_SOURCE_FILES} ${VM_SOURCE_FILES} ${COMPILER_SOURCE_FILES})
target_link_libraries(${PROJECT_NAME} m)
