cmake_minimum_required(VERSION 3.5.1)
project(crispy)

set(CMAKE_C_STANDARD 99)

AUX_SOURCE_DIRECTORY(src/cli CLI_SOURCE_FILES)
AUX_SOURCE_DIRECTORY(src/vm VM_SOURCE_FILES)
AUX_SOURCE_DIRECTORY(src/compiler COMPILER_SOURCE_FILES)
AUX_SOURCE_DIRECTORY(src/native NATIVE_SOURCE_FILES)
add_executable(${PROJECT_NAME} ${CLI_SOURCE_FILES} ${VM_SOURCE_FILES} ${COMPILER_SOURCE_FILES} ${NATIVE_SOURCE_FILES})
target_link_libraries(${PROJECT_NAME} m)